correct teacher name alignment in noticeboard section

--- a/teacherPortal/static/teacher/css/notice.css
+++ b/teacherPortal/static/teacher/css/notice.css
@@ -22,7 +22,7 @@ h3{
     font-size: 22px;
 }
 
-p{
+p.date{
     text-align: end;
     width:100%;
 }
